rm visualize.jade, integrated visualization into index.jade, adjusted swagger accordingly
